--- a/Telco Churn EDA.ipynb
+++ b/Telco Churn EDA.ipynb
@@ -1906,17 +1906,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Group 0-402$\n",
+       "1    Group 1397-3795$\n",
+       "2        Group 0-402$\n",
+       "3    Group 1397-3795$\n",
+       "4        Group 0-402$\n",
+       "Name: TotalCharges, dtype: object"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#df['TotalCharges'] = df.apply(lambda df: TotalCharges_lab(df),axis = 1)\n",
-    "#df['TotalCharges'].head()"
+    "df['TotalCharges'] = df.apply(lambda df: TotalCharges_lab(df),axis = 1)\n",
+    "df['TotalCharges'].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
